comment list overflow bug

--- a/app/assets/stylesheets/api/comments.scss
+++ b/app/assets/stylesheets/api/comments.scss
@@ -69,7 +69,7 @@
     flex-direction: column;
     flex-wrap: wrap;
     box-sizing: border-box;
-    // overflow: auto;
+    overflow: scroll;
     color: darkgray;
     padding-right: 10px;
     height: 300px;
